DROOP-425 Prevent stretching of product images in slider navigation

--- a/themes/custom/droopler_theme/scss/components/_d_products_slider.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_products_slider.scss
@@ -68,6 +68,7 @@
       .slick-track-const {
         display: flex;
         justify-content: center;
+        align-items: center;
         width: 100% !important;
         transform: none !important;
       }
